# rust-memcmp

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs
