[package]

name = "memcmp"
version = "0.0.4"
description = "Optimized memory comparisons for integer slices. Temporary solution until rust issue 16913 is resolved."
license = "MIT"
documentation = "https://github.com/daramos/rust-memcmp"
homepage = "https://github.com/daramos/rust-memcmp"
repository = "https://github.com/daramos/rust-memcmp"
readme = "README.md"
keywords = ["memcmp","compare"]

authors = ["Daniel Ramos <dan@daramos.com>"]
